tests/snapshots/cli__check_fail.snap
---
source: tests/cli.rs
assertion_line: 86
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
---
STDOUT
STDERR
Failed example:
    add(1, 2)
Expected:
    99
Got:
    3
Running tests...
1 test, 0 successes, 1 failure and 0 errors.
