tests/snapshots/cli__check_multiple_prints_names.snap
---
source: tests/cli.rs
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
---
STDOUT
ok.py
fail.py
**********************************************************************
File "fail.py", line 3, in __doctest__.add
Failed example:
    add(1, 2)
Expected:
    99
Got:
    3
**********************************************************************
1 item had failures:
   1 of   1 in __doctest__.add
***Test Failed*** 1 failure.
STDERR
