tests/snapshots/cli__check_verbose.snap
---
source: tests/cli.rs
assertion_line: 118
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
---
STDOUT
STDERR
ok: add(1, 2)
ok: add(-1, 1)
2 examples passed.
