tests/snapshots/cli__run_files@ok_stdlib_imports.py.snap
---
source: tests/cli.rs
expression: "format!(\"STDOUT\\n{out}STDERR\\n{err}\")"
input_file: tests/inputs/ok_stdlib_imports.py
---
STDOUT
Testing imports
STDERR
