tests/snapshots/cli__run_images@above_align1.py.snap
---
source: tests/cli.rs
assertion_line: 53
expression: "format!(\"{out}\")"
input_file: tests/images/above_align1.py
---

