tests/snapshots/cli__run_images@add_line1.py.snap
---
source: tests/cli.rs
assertion_line: 53
expression: "format!(\"{out}\")"
input_file: tests/images/add_line1.py
---

