tests/snapshots/cli__run_images@beside1.py.snap
---
source: tests/cli.rs
assertion_line: 53
expression: "format!(\"{out}\")"
input_file: tests/images/beside1.py
---

